# sameness_restructured

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  server.crt  server.key
certs/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key
include/: EventPacket.h  EventState.h  Injectors.h  ScreenEdgeSwitcher.h  event.h  input_helper.h  uiohook.h
src/: EventPacket.cpp  EventState.cpp  Injectors.cpp  ScreenEdgeSwitcher.cpp  network_client.cpp  network_server.cpp
tests/: input_test.cpp
